<resources>
    <string name="app_name">NotesAndrey</string>
    <string name="findBeerButtonText">Find beer</string>
    <string name="button2">Написать сообщение</string>
    <string name="name_beer">Найди пиво</string>
    <string name="send">Отправить сообщение</string>
    <string name="send_editText">Введите сообщение</string>
    <string name="send_fragment">Сообщение отправлено</string>
    <string name="zero">Пустой</string>
    <string name="chooser">Telegram</string>
    <string name="start">Начать</string>
    <string name="stop">Стоп</string>
    <string name="reset">Сброс</string>
    <string name="stop_watch">Секундомер</string>
    <string name="calculator">Калькулятор</string>
    <string-array name="beer_colors">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="percent">%</string>
    <string name="point">.</string>
    <string name="sum">+</string>
    <string name="difference">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equally">=</string>
    <string name="number">Введите сообщение</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="delete_all">C</string>
    <string name="delete_one">X</string>

    <string name="text_cat1">Милые и привлекательные</string>
    <string name="text_cat2">Мой пуся</string>
    <string name="text_cat3">Не оставь коту ни единого шанса… опрокинь ёлку сам!</string>
    <string name="text_cat4">Справляется с беспокойством просто замурчательно</string>

    <string name="btn1">Счетчик</string>
    <string name="btn2">Кнопка 2</string>
    <string name="btn3">Кнопка 3</string>
    <string name="hello">hello My Friend</string>


</resources>