<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textField"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#808080"
            android:orientation="horizontal">

            <Button
                android:id="@+id/all_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/delete_all"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/bracket1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/left_bracket"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bracket2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/right_bracket"
                android:textSize="30sp" />

            <Button
                android:id="@+id/one_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/delete_one"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#808080"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number1"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/number_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/number_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/sum"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#808080"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number4"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/number_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/number_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/difference"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/difference"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="#808080"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:shadowColor="#817070"
                android:text="@string/number7"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/number_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/number8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/number_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/number9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/multiplication"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#808080"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/number0"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/point"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equally"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/equally"
                android:textSize="30sp" />

            <Button
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:shadowColor="#817070"
                android:text="@string/division"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>