<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_layout_fragment_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSecond">


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btn2"
        app:cornerRadius="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/hello"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn3" />


</FrameLayout>