<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calc">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/cat" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/text_cat4"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="24sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_goneMarginEnd="16dp" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="198dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/small"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/director_label"
            android:layout_width="241dp"
            android:layout_height="71dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="36dp"
            android:text="@string/text_cat1"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cat2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="20sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/poster"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title,poster,director_label,
            director" />

        <TextView
            android:id="@+id/short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_cat3"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_section_barrier" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="364dp"
            android:layout_height="126dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/cat_sausage"
            app:layout_constraintBottom_toTopOf="@+id/short_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>